--- a/frontend/src/app/components/solar-system/solar-system.scss
+++ b/frontend/src/app/components/solar-system/solar-system.scss
@@ -144,6 +144,7 @@
     user-select: none;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    z-index: 10;
   }
 }
 
